fixing text input on mobile devices

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -4,3 +4,7 @@
 .center{
   text-align: center;
 }
+.block{
+  display:block;
+  width:200px
+}
